--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Local ENV files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
